--- a/popup/popup.html
+++ b/popup/popup.html
@@ -35,6 +35,6 @@
     <button class="options-btn" id="optionsButton">⚙️ Options</button>
   </div>
   
-  <script src="popup.js"></script>
+  <script type="module" src="../popup.js"></script>
 </body>
 </html>
