--- a/options/options.html
+++ b/options/options.html
@@ -187,6 +187,6 @@
     </div>
   </div>
   
-  <script src="options.js"></script>
+  <script type="module" src="../options.js"></script>
 </body>
 </html>
