--- a/src/options/options.html
+++ b/src/options/options.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PomoBlock Options</title>
-  <link rel="stylesheet" href="options.css">
+  <link rel="stylesheet" href="css/options.css">
 </head>
 <body>
   <div class="container">
@@ -187,6 +187,6 @@
     </div>
   </div>
   
-  <script src="options.js"></script>
+  <script src="js/options.bundle.js"></script>
 </body>
 </html>
