--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PomoBlock</title>
-  <link rel="stylesheet" href="popup.css">
+  <link rel="stylesheet" href="css/popup.css">
 </head>
 <body>
   <div class="header">
@@ -35,6 +35,6 @@
     <button class="options-btn" id="optionsButton">⚙️ Options</button>
   </div>
   
-  <script src="popup.js"></script>
+  <script src="js/popup.bundle.js"></script>
 </body>
 </html>
