--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,11 +10,14 @@
     <h2>🍅 PomoBlock</h2>
   </div>
   
-  <div class="status" id="statusDisplay">
-    <span id="siteCount">0</span> sites blocked
+  <!-- <div class="tab-content" id="timerTab"> -->
+  <div id="timerTab">
+    <div id="pomodoroContainer">
+      <!-- Pomodoro component will be inserted here -->
+    </div>
   </div>
   
-  <div class="tabs">
+  <!-- <div class="tabs">
     <div class="tab-button active" data-tab="blocker">
       <span class="tab-icon">🚫</span>
       <span class="tab-text">Blocker</span>
@@ -23,9 +26,10 @@
       <span class="tab-icon">🍅</span>
       <span class="tab-text">Timer</span>
     </div>
-  </div>
+  </div> -->
   
-  <div class="tab-content active" id="blockerTab">
+  <!-- <div class="tab-content active" id="blockerTab"> -->
+  <div id="blockerTab">
     <div class="current-site">
       <h4>Current Page:</h4>
       <div class="site-info">
@@ -41,11 +45,9 @@
       </button>
     </div>
   </div>
-  
-  <div class="tab-content" id="timerTab">
-    <div id="pomodoroContainer">
-      <!-- Pomodoro component will be inserted here -->
-    </div>
+
+  <div class="status" id="statusDisplay">
+    <span id="siteCount">0</span> sites blocked
   </div>
   
   <div class="controls">
