More partial progress

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,25 +10,12 @@
     <h2>🍅 PomoBlock</h2>
   </div>
   
-  <!-- <div class="tab-content" id="timerTab"> -->
-  <div id="timerTab">
-    <div id="pomodoroContainer">
-      <!-- Pomodoro component will be inserted here -->
-    </div>
+  <!-- Integrated Pomodoro Timer Section -->
+  <div id="pomodoroContainer">
+    <!-- Pomodoro component will be inserted here -->
   </div>
   
-  <!-- <div class="tabs">
-    <div class="tab-button active" data-tab="blocker">
-      <span class="tab-icon">🚫</span>
-      <span class="tab-text">Blocker</span>
-    </div>
-    <div class="tab-button" data-tab="timer">
-      <span class="tab-icon">🍅</span>
-      <span class="tab-text">Timer</span>
-    </div>
-  </div> -->
-  
-  <!-- <div class="tab-content active" id="blockerTab"> -->
+  <!-- Site Blocking Section -->
   <div id="blockerTab">
     <div class="current-site">
       <h4>Current Page:</h4>
