Floating timer toggle

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,8 +10,17 @@
     <!-- Compact Header -->
     <div class="header">
       <h2>🍅 PomoBlock</h2>
-      <div class="header-stats">
-        <span id="siteCount">0</span> blocked
+      <div class="header-right">
+        <div class="floating-timer-toggle">
+          <label class="toggle-label">
+            <input type="checkbox" id="floatingTimerToggle" class="toggle-checkbox">
+            <span class="toggle-slider"></span>
+            <span class="toggle-text">Timer</span>
+          </label>
+        </div>
+        <div class="header-stats">
+          <span id="siteCount">0</span> blocked
+        </div>
       </div>
     </div>
     
