--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -39,7 +39,7 @@
       </div>
       
       <!-- Block Type Selector -->
-      <div class="block-type-section" id="blockTypeSection" style="display: none;">
+      <div class="block-type-section hidden" id="blockTypeSection">
         <div class="block-type-header">
           <span class="block-type-title">Choose what to block:</span>
           <button class="block-type-toggle" id="blockTypeToggle">▼</button>
