Fix workflow and add floating timer vibe

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -40,7 +40,7 @@
       
       <!-- Block Type Selector -->
       <div class="block-type-section hidden" id="blockTypeSection">
-        <div class="block-type-header">
+        <div class="block-type-header" id="blockTypeHeader">
           <span class="block-type-title">Choose what to block:</span>
           <button class="block-type-toggle" id="blockTypeToggle">▼</button>
         </div>
