Fix bug in popup timer label

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -18,7 +18,7 @@
             <span class="toggle-text">Timer</span>
           </label>
         </div>
-        <div class="header-stats">
+        <div class="header-stats" id="statusDisplay">
           <span id="siteCount">0</span> blocked
         </div>
       </div>
