--- a/src/offscreen/audio.html
+++ b/src/offscreen/audio.html
@@ -5,6 +5,6 @@
     <title>PomoBlock Audio Offscreen</title>
 </head>
 <body>
-    <script src="audio.js"></script>
+    <!-- Script will be injected by webpack HtmlWebpackPlugin -->
 </body>
 </html>
